# ArtAnalytics

./: .env  .env.example  .gitignore  CHANGELOG.md  MIA_INTEGRATION_GUIDE.md  MUSEUMS.md  README.md  aic_analytics.ipynb  alembic.ini  analytics.py  init_db.py  main.py  pyproject.toml  requirements.txt  setup.py  test.py  test_met_fix.py
OLD/: AIC_img_download.py  AIC_img_scape_script.py
alembic/: env.py
alembic/versions/: 131fd44199da_add_quality_scores_and_image_dimensions.py  35b8505c9f6f_initial_database_setup.py  f05bc7373a80_reset_schema_with_expanded_artwork_.py
notebooks/: aic_analytics.ipynb  log_analysis.ipynb
scripts/: macbook_wallpaper.py  rename_images.py  reseed_met_from_cache.py  reset.py
src/: __init__.py  api.py  config.py  display_specs.py  displays.py  download.py  log_level.py  quality_scoring.py  utils.py
src/api/: cache.py  dependencies.py  endpoints.py  schemas.py
src/database/: __init__.py  add_cma.py  backfill_quality_scores.py  database.py  migrate_to_postgres.py  models.py  repository.py
src/download/: __init__.py  api_client.py  artwork_downloader.py  cma_bulk_download.py  image_processor.py  progress_tracker.py
src/museums/: __init__.py  aic.py  base.py  cleveland.py  cma.py  loc.py  met.py  mia.py  museum_info.py  nga.py  rijks.py  schemas.py  smk.py  tepapa.py  wellcome.py
src/museums/schemas/: __init__.py  artwork_metadata.py  factories.py
src/processing/: __init__.py  json_processor.py
src/settings/: __init__.py  config.py  types.py
tests/: conftest.py
tests/museums/: test_loc.py  test_nga.py  test_rijks.py  test_tepapa.py  test_wellcome.py
