[tool.poetry]
name = "artserve"
version = "0.1.0"
description = "Art museum API integration and artwork downloader"
authors = ["Yusuf Ghani <yusuf.k.ghani@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
requests = "^2.32.3"
pillow = "^11.0.0"
pydantic = {extras = ["email"], version = "^2.0.0"} 
pydantic-settings = "^2.0.0"
python-dotenv = "^0.21.0"
requests-cache = "^1.2.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
fastapi = "^0.115.5"
redis = "^5.2.0"
fastapi-cache = "^0.1.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
numpy = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:main"