[project]
name = "artserve-downloader"
version = "0.1.1"
description = "Art museum API integration and artwork downloader"
authors = [{name = "Yusuf Ghani", email = "yusuf.k.ghani@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # HTTP & API
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    # Image processing
    "pillow>=11.0.0",
    "shapely>=2.0.6",
    # JSON streaming (for large files)
    "ijson>=3.2.0",
    # API (for local testing)
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    # Config & validation
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=0.21.0",
    # MacOS (for wallpaper script)
    "artserve-shared",
    "psycopg2-binary>=2.9.11",
]

[tool.uv]
dev-dependencies = [
    # Data analysis & exploration
    "ipython>=8.29.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "numpy>=2.1.2",
    "black>=25.12.0",
]

[tool.uv.sources]
artserve-shared = { path = "../ArtServe-Shared/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
artserve-download = "main:main"
